{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 8,
  "lineage": "fa15e2d8-dc7e-fabd-64fc-c78665c07745",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "python_app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a55e8ab41f232a0",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-04ee2178f7dc941f6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04ee2178f7dc941f6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0a47c1bbba1d70793",
            "private_dns": "ip-10-0-0-82.eu-west-1.compute.internal",
            "private_ip": "10.0.0.82",
            "public_ip": "54.171.153.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b5613709104e8603",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b454dc75da2f2f7",
            "tags": {
              "Name": "Eng48-Kajal-Python-App"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-039b1e226515b46f2"
            ]
          },
          "dependencies": [
            "aws_security_group.python_app_sg",
            "aws_subnet.python_app_subnet",
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "python_app_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0979682ae105a083c",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Kajal-Python-App"
            },
            "vpc_id": "vpc-0ebe57ecee5097054"
          },
          "dependencies": [
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "python_app_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03c355f606300631c",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0979682ae105a083c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-Kajal-Python-App"
            },
            "vpc_id": "vpc-0ebe57ecee5097054"
          },
          "dependencies": [
            "aws_internet_gateway.python_app_gw",
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "python_app_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf1688d6b44a76d",
            "route_table_id": "rtb-03c355f606300631c",
            "subnet_id": "subnet-04b454dc75da2f2f7"
          },
          "dependencies": [
            "aws_internet_gateway.python_app_gw",
            "aws_route_table.python_app_route",
            "aws_subnet.python_app_subnet",
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "python_app_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-039b1e226515b46f2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-039b1e226515b46f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "212.161.55.68/32",
                  "86.141.168.180/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Eng48-Kajal-Python-App",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ebe57ecee5097054"
          },
          "dependencies": [
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "python_app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-04b454dc75da2f2f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-04b454dc75da2f2f7",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Kajal-Python-App"
            },
            "vpc_id": "vpc-0ebe57ecee5097054"
          },
          "dependencies": [
            "aws_vpc.python_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "python_app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0ebe57ecee5097054",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d681e735dd2c477b",
            "default_route_table_id": "rtb-0acfcaf577e84b981",
            "default_security_group_id": "sg-0543338e1b61bdbbf",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ebe57ecee5097054",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0acfcaf577e84b981",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Kajal-Python-App"
            }
          }
        }
      ]
    }
  ]
}